--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: BSPCompassTeleport
-version: 1.1.3
+version: 1.1.3a
 main: eu.blackspectrum.compassteleport.CompassTeleport
 commands:
   compassteleportreload:
